test/libyul/yulSyntaxTests/eof/eof_names_reserved_in_eof.yul
{
    function auxdataloadn() {}
    function eofcreate() {}
    function returncontract() {}
    function extcall() {}
    function extdelegatecall() {}
    function extstaticcall() {}
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// ParserError 5568: (15-27): Cannot use builtin function name "auxdataloadn" as identifier name.
// ParserError 5568: (46-55): Cannot use builtin function name "eofcreate" as identifier name.
// ParserError 5568: (74-88): Cannot use builtin function name "returncontract" as identifier name.
// ParserError 5568: (107-114): Cannot use builtin function name "extcall" as identifier name.
// ParserError 5568: (133-148): Cannot use builtin function name "extdelegatecall" as identifier name.
// ParserError 5568: (167-180): Cannot use builtin function name "extstaticcall" as identifier name.
